# omni-converter

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
coconut/: astar.coco  auto_data.coco  monad.coco
omni_converter/: __init__.py  util.py  util.pyi
omni_converter/auto_data/: auto_v2.py  auto_v2.pyi  default_rules.py  format_resolution.py  i_auto_data.py  i_auto_data.pyi
omni_converter/coconut/: __coconut__.py  astar.py  auto_data.py  monad.py
omni_converter/solver/: astar.py  astar.pyi  heap_wrapper.py  rules.py  rules.pyi
test/: test_omni_converter.py
