[tool.poetry]
name = "py-omni-converter"
version = "0.1.25"
description = ""
authors = ["proboscis <nameissoap@gmail.com>"]
packages = [{include="omni_converter"}]
license = "MIT"
[tool.poetry.dependencies]
python = "^3.7"
cytoolz = "*"
tabulate = "*"
tqdm = "*"
pampy="*"
loguru="*"
lru-dict="^1.0.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
[build-system]
requires = ["poetry-core>=1.0.0","setuptools"]
build-backend = "poetry.core.masonry.api"


[proboscis]
name="omni-converter"
[proboscis.pypi_dependencies]
pampy="*"